--- a/src/app/assignment/question-group-list/question-group-detail/independent-writing-question-detail/independent-writing-question-detail.component.html
+++ b/src/app/assignment/question-group-list/question-group-detail/independent-writing-question-detail/independent-writing-question-detail.component.html
@@ -1,105 +1,120 @@
-<div class="container" *ngIf="homeworkMode()" fxLayout="column" fxLayoutGap="20px" fxLayoutAlign="start">
-    <div class="direction">
-        <p>Directions: You have 30 minutes to plan and write your response. Your response will be judged on the basis of the quality of your writing and on how well your response presents the points in the lecture and their relationship to the reading passage. Typically an effective response will be 300 words at least.</p>
-    </div>
+<app-question-header
+        [assignmentName]="assignmentName"
+        [classId]="classId"
+        [mode]="mode"
+        (next)="next()"
+        (pre)="pre()"
+        [showNext]="showNextButton"
+        [showPre]="showPreButton"
+        [disableNext]="disableNextButton"
+></app-question-header>
 
-    <div class="question-content" fxLayout="row"
-         fxLayoutWrap="wrap" fxLayout.sm="column"
-         fxLayoutAlign="start">
-
-        <div class="question" fxLayout="column" fxFlex="1 1 45%">
-            <div [froalaView]="independentWritingQuestion.question"></div>
+<div class="container">
+    <div *ngIf="homeworkMode()" fxLayout="column" fxLayoutGap="20px" fxLayoutAlign="start">
+        <div class="direction">
+            <p>Directions: You have 30 minutes to plan and write your response. Your response will be judged on the basis of the quality of your writing and on how well your response presents the points in the lecture and their relationship to the reading passage. Typically an effective response will be 300 words at least.</p>
         </div>
-        <div class="passage" fxLayout="column" fxLayoutGap="10px" fxFlex="1 1 55%">
-            <div class="header" fxLayout="row" fxLayoutGap="10px" fxLayoutAlign="start center">
-                <md-card>
-                    <md-card-content>
-                        <label class="word-count">Word Count:{{wordCount}}</label>
-                    </md-card-content>
-                </md-card>
-                <span fxFlex></span>
+
+        <div class="question-content" fxLayout="row"
+             fxLayoutWrap="wrap" fxLayout.sm="column"
+             fxLayoutAlign="start">
+
+            <div class="question" fxLayout="column" fxFlex="1 1 50%">
+                <div [froalaView]="independentWritingQuestion.question"></div>
             </div>
-            <textarea class="form-control"
-                      [froalaEditor]="EditorStudentOptions"
-                      [(froalaModel)]="content"
-                      [(ngModel)]="content" (ngModelChange)="changeAnswer()"
-                      rows="10" required ></textarea>
-        </div>
-    </div>
-</div>
-
-
-<div class="container" *ngIf="markingMode()" fxLayout="column" fxLayoutGap="20px" fxLayoutAlign="start">
-    <div class="direction">
-        <p>Directions: You have 30 minutes to plan and write your response. Your response will be judged on the basis of the quality of your writing and on how well your response presents the points in the lecture and their relationship to the reading passage. Typically an effective response will be 300 words at least.</p>
-    </div>
-
-    <div class="question-content" fxLayout="row"
-         fxLayoutWrap="wrap" fxLayout.sm="column"
-         fxLayoutAlign="start">
-
-        <div class="question" fxLayout="column" fxFlex="1 1 45%">
-            <div [froalaView]="independentWritingQuestion.question"></div>
-        </div>
-        <div class="passage" fxLayout="column" fxLayoutGap="10px" fxFlex="1 1 55%">
-            <div class="header" fxLayout="row" fxLayoutGap="10px" fxLayoutAlign="start center">
-                <md-card>
-                    <md-card-content>
-                        <label class="word-count">Word Count:{{wordCount}}</label>
-                    </md-card-content>
-                </md-card>
-
-                <md-card>
-                    <md-card-content>
-                        <label class="grade">分数:{{markingScore>=0?markingScore:0}}</label>
-                    </md-card-content>
-                </md-card>
-
-                <span fxFlex></span>
-                <app-score-marker [score]="independentWritingQuestion.score" (marking)="markScore($event)"></app-score-marker>
+            <div class="passage" fxLayout="column" fxLayoutGap="10px" fxFlex="1 1 50%">
+                <div class="header" fxLayout="row" fxLayoutGap="10px" fxLayoutAlign="start center">
+                    <md-card>
+                        <md-card-content>
+                            <label class="word-count">Word Count:{{wordCount}}</label>
+                        </md-card-content>
+                    </md-card>
+                    <span fxFlex></span>
+                </div>
+                <textarea class="form-control"
+                          [froalaEditor]="EditorStudentOptions"
+                          [(froalaModel)]="content"
+                          [(ngModel)]="content" (ngModelChange)="changeAnswer()"
+                          rows="10" required ></textarea>
             </div>
-            <textarea class="form-control"
-                      [froalaEditor]="EditorTeacherOptions"
-                      [(froalaModel)]="content"
-                      [(ngModel)]="content" (ngModelChange)="changeAnswer()"
-                      rows="10" required ></textarea>
         </div>
     </div>
-</div>
 
-<div class="container" *ngIf="reviewMode()" fxLayout="column" fxLayoutGap="20px" fxLayoutAlign="start">
-    <div class="direction">
-        <p>Directions: You have 30 minutes to plan and write your response. Your response will be judged on the basis of the quality of your writing and on how well your response presents the points in the lecture and their relationship to the reading passage. Typically an effective response will be 300 words at least.</p>
-    </div>
-
-    <div class="question-content" fxLayout="row"
-         fxLayoutWrap="wrap" fxLayout.sm="column"
-         fxLayoutAlign="start">
-
-        <div class="question" fxLayout="column" fxFlex="1 1 45%">
-            <div [froalaView]="independentWritingQuestion.question"></div>
+    <div *ngIf="markingMode()" fxLayout="column" fxLayoutGap="20px" fxLayoutAlign="start">
+        <div class="direction">
+            <p>Directions: You have 30 minutes to plan and write your response. Your response will be judged on the basis of the quality of your writing and on how well your response presents the points in the lecture and their relationship to the reading passage. Typically an effective response will be 300 words at least.</p>
         </div>
-        <div class="passage" fxLayout="column" fxLayoutGap="10px" fxFlex="1 1 55%">
-            <div class="header" fxLayout="row" fxLayoutGap="10px" fxLayoutAlign="start center">
-                <md-card>
-                    <md-card-content>
-                        <label class="word-count">Word Count:{{wordCount}}</label>
-                    </md-card-content>
-                </md-card>
 
-                <md-card>
-                    <md-card-content>
-                        <label class="grade">分数:{{markingScore>=0?markingScore:0}}</label>
-                    </md-card-content>
-                </md-card>
+        <div class="question-content" fxLayout="row"
+             fxLayoutWrap="wrap" fxLayout.sm="column"
+             fxLayoutAlign="start">
 
-                <span fxFlex></span>
+            <div class="question" fxLayout="column" fxFlex="1 1 50%">
+                <div [froalaView]="independentWritingQuestion.question"></div>
             </div>
-            <div class="review-content" [froalaView]="content"></div>
+            <div class="passage" fxLayout="column" fxLayoutGap="10px" fxFlex="1 1 50%">
+                <div class="header" fxLayout="row" fxLayoutGap="10px" fxLayoutAlign="start center">
+                    <md-card>
+                        <md-card-content>
+                            <label class="word-count">Word Count:{{wordCount}}</label>
+                        </md-card-content>
+                    </md-card>
+
+                    <md-card>
+                        <md-card-content>
+                            <label class="grade">分数:{{markingScore>=0?markingScore:0}}</label>
+                        </md-card-content>
+                    </md-card>
+
+                    <span fxFlex></span>
+                    <app-score-marker [score]="independentWritingQuestion.score" (marking)="markScore($event)"></app-score-marker>
+                </div>
+                <textarea class="form-control"
+                          [froalaEditor]="EditorTeacherOptions"
+                          [(froalaModel)]="content"
+                          [(ngModel)]="content" (ngModelChange)="changeAnswer()"
+                          rows="10" required ></textarea>
+            </div>
         </div>
     </div>
-    <div class="answer">
-        <p>参考范文：</p>
-        <div [froalaView]="independentWritingQuestion.answer"></div>
+
+    <div *ngIf="reviewMode()">
+        <div class="question-page"
+             fxLayout="column" fxLayoutGap="20px" fxLayoutAlign="start">
+            <div class="direction">
+                <p>Directions: You have 30 minutes to plan and write your response. Your response will be judged on the basis of the quality of your writing and on how well your response presents the points in the lecture and their relationship to the reading passage. Typically an effective response will be 300 words at least.</p>
+            </div>
+
+            <div class="question-content" fxLayout="row"
+                 fxLayoutWrap="wrap" fxLayout.sm="column"
+                 fxLayoutAlign="start">
+
+                <div class="question" fxLayout="column" fxFlex="1 1 50%">
+                    <div [froalaView]="independentWritingQuestion.question"></div>
+                </div>
+                <div class="passage" fxLayout="column" fxLayoutGap="10px" fxFlex="1 1 50%">
+                    <div class="header" fxLayout="row" fxLayoutGap="10px" fxLayoutAlign="start center">
+                        <md-card>
+                            <md-card-content>
+                                <label class="word-count">Word Count:{{wordCount}}</label>
+                            </md-card-content>
+                        </md-card>
+
+                        <md-card>
+                            <md-card-content>
+                                <label class="grade">分数:{{markingScore>=0?markingScore:0}}</label>
+                            </md-card-content>
+                        </md-card>
+
+                        <span fxFlex></span>
+                    </div>
+                    <div class="review-content" [froalaView]="content"></div>
+                </div>
+            </div>
+            <div class="answer">
+                <p>参考范文：</p>
+                <div [froalaView]="independentWritingQuestion.answer"></div>
+            </div>
+        </div>
     </div>
 </div>
