--- a/src/app/assignment/question-group-list/question-group-detail/tpo-reading-question-detail/tpo-reading-question-detail.component.css
+++ b/src/app/assignment/question-group-list/question-group-detail/tpo-reading-question-detail/tpo-reading-question-detail.component.css
@@ -1,12 +1,16 @@
 .question-content{
     background-color: #efeff0;
-    min-height: 100vh;
+    position: absolute;
+    top: 90px;
+    bottom: 0px;
+    width: 100%;
 }
 
 .question{
     padding-left: 40px;
     padding-top: 20px;
     padding-right: 20px;
+    min-height: 100%;
 }
 
 .topic-question{
@@ -15,9 +19,10 @@
 }
 
 .passage{
-    padding: 26px 20px 20px 20px;
+    padding: 26px 40px 20px 20px;
     background-color: white;
     border-left: 1px solid dimgray;
+    overflow: scroll;
 }
 
 md-radio-button{
