--- a/src/app/assignment/question-group-list/question-group-detail/tpo-speaking-question-detail/tpo-speaking-question-detail.component.css
+++ b/src/app/assignment/question-group-list/question-group-detail/tpo-speaking-question-detail/tpo-speaking-question-detail.component.css
@@ -1,9 +1,18 @@
+.container{
+    background-color: white;
+    position: absolute;
+    top: 90px;
+    bottom: 0px;
+    width: 100%;
+}
+
 .profile{
-    margin: 55px;
+    margin: 10px;
 }
 
 .question-content{
-    padding: 30px 20px 10px 20px;
+    padding: 24px 30px 24px 30px;
+    min-height: 100%;
 }
 
 app-question-index{
@@ -14,34 +23,51 @@ app-question-index{
     max-width: 100%;
     font-size: 18px;
     line-height: 28px;
-    margin:10px 0px 10px 0px;
+    padding-bottom: 5px;
+    margin:15px 0px 10px 0px;
     border-bottom: 1px solid lightgray;
 }
 
 .passage{
     max-width: 100%;
-    height: 250px;
-    padding: 10px;
+    min-height: 250px;
+    padding: 0 10px 0 10px;
     background-color: white;
     border: 1px solid lightgray;
-    margin:10px 30px 10px 0px;
+    margin:10px 0px 10px 0px;
 }
 
 app-audio-player{
     width: 700px;
     margin-top: 50px;
 }
+md-expansion-panel{
+    margin-bottom: 10px !important;
+    border:1px solid lightgray;
+}
+
+md-expansion-panel .passage{
+    margin:0 0px 0 0;
+    min-height: 200px;
+}
 
 .question-container{
-    width: 700px;
+    width: 100%;
+    background-color: white;
+    border: 1px solid lightgray;
+    padding: 15px 24px 15px 24px;
+}
+
+.question-container p{
+    margin: 0;
+}
+
+md-card.mat-card{
+    padding: 8px 15px 8px 15px;
 }
 
 app-tpo-review-player{
     width: 500px;
-}
-
-md-card{
-    padding: 15px;
 }
 
 app-score-marker{
@@ -52,5 +78,19 @@ app-score-marker{
     background-color: white;
     border:1px solid lightgray;
     min-height: 200px;
-    padding: 10px;
+    padding: 0 10px 0 10px;
+}
+
+.homework-mode .question-container{
+    width: 700px;
+    background-color: rgba(255, 255, 255, 0);
+    border:none;
+}
+
+app-count-down-timer{
+    width: 722px;
+}
+
+.homework-mode .passage{
+    width: 700px;
 }
