--- a/src/styles.css
+++ b/src/styles.css
@@ -12,6 +12,19 @@ html{
     position:relative;
 }
 
+md-icon > .md-font{
+    /* Support for all WebKit browsers. */
+    -webkit-font-smoothing: antialiased;
+    /* Support for Safari and Chrome. */
+    text-rendering: optimizeLegibility;
+
+    /* Support for Firefox. */
+    -moz-osx-font-smoothing: grayscale;
+
+    /* Support for IE. */
+    font-feature-settings: 'liga';
+}
+
 body{
     background-color: #f7f8fa;
 }
