--- a/src/app/assignment/question-group-list/question-group-detail/tpo-reading-question-detail/tpo-reading-question-detail.component.css
+++ b/src/app/assignment/question-group-list/question-group-detail/tpo-reading-question-detail/tpo-reading-question-detail.component.css
@@ -25,6 +25,10 @@
     overflow: scroll;
 }
 
+p.selected-paragraph:before{
+    content:"<span>slkdjf</span>";
+}
+
 md-radio-button{
     margin: 10px 0px 10px 0px;
 }
